# vizzy

./: .gitignore  3D_QUALITY_PLAN.md  CLAUDE.md  LICENSE  NATIVE_MIGRATION_PLAN.md  README.md  SHADER_GENERATION_PLAN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vitest.config.js
.github/workflows/: build.yml  ci.yml  tauri-build.yml
docs/: getting-started.html  index.html
electron/: main.cjs  ollama-manager.cjs
scripts/: bump-version.mjs  shoot-guide.mjs
src/: App.jsx  App.test.jsx  App.tsx  global.d.ts  index.css  main.jsx  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  vizzy-document.icns
src-tauri/scripts/: fetch-syphon.sh
src-tauri/src/: audio.rs  lib.rs  main.rs  midi.rs  ollama.rs
src-tauri/src/render/: compositor.wgsl  content.rs  content.wgsl  engine.rs  evaluate.rs  filter.wgsl  glow.wgsl  ingest.rs  math3d.rs  mod.rs  params.rs  patch.rs  spout.rs  state.rs  syphon.rs  window.rs
src-tauri/src/render/video/: gst.rs  macos.rs  mf.rs  mod.rs
src/components/: AudioMeterPanel.tsx  AudioMeterStrip.tsx  BpmSyncBridge.tsx  DeckModule.jsx  DeckModule.test.jsx  DeckModule.tsx  Knob.jsx  Knob.test.jsx  Knob.tsx  LibraryPanel.jsx  LibraryPanel.tsx  LooperModal.tsx  Mixer.jsx  Mixer.test.jsx  Mixer.tsx  PerformanceView.tsx  SettingsPanel.tsx  SetupScreen.jsx  SetupScreen.tsx  TopBar.jsx  TopBar.test.jsx  TopBar.tsx  Tutorial.jsx  Tutorial.test.jsx  Tutorial.tsx  UpdateBanner.tsx  UpdaterWindow.tsx  WorkspaceProgress.tsx
src/engine/: AudioEngine.js  AudioEngine.test.js  AudioEngine.ts  MidiEngine.js  MidiEngine.test.js  MidiEngine.ts  NativeAudioEngine.ts  NativeRenderEngine.test.js  NativeRenderEngine.ts  RenderEngine.js  RenderEngine.test.js  RenderEngine.ts  automation.test.js  automation.ts  compositor.ts  glValidate.ts  preview.ts  shaders.js  shaders.test.js  shaders.ts  types.ts
src/hooks/: useAudioControls.ts  useAudioMeters.ts  useEngineRig.ts  useFullscreen.ts  useGeneration.ts  useLibrary.ts  useLlmSetup.ts  useMasterWindow.ts  useMidiControls.ts  usePerformanceState.ts  useSessionPersistence.ts  useUpdater.ts
src/lib/: CLAUDE.md  assetTypes.ts  channels.ts  exampleSeed.js  exampleSeed.test.js  exampleSeed.ts  expr.test.js  expr.ts  llmJson.ts  loopControls.test.js  loopControls.ts  modelLoader.js  modelLoader.ts  patches.test.js  patches.ts  renderSettings.ts  sceneGenerator.test.js  sceneGenerator.ts  session.js  session.test.js  session.ts  shaderLibrary.js  shaderLibrary.test.js  shaderLibrary.ts  sourceStaging.test.js  sourceStaging.ts  spriteLoader.js  spriteLoader.ts  storage.ts  workspaceIO.test.js  workspaceIO.ts
src/llm/: models.js  models.test.js  models.ts  ollama.js  ollama.test.js  ollama.ts  parser.js  parser.test.js  parser.ts  patches.ts  recipes.js  recipes.test.js  recipes.ts  scenes.test.js  scenes.ts
src/platform/: electron.ts  index.ts  tauri.ts  types.ts
src/test/: fakePlatform.js  setup.js
